@@ -1,3 +1,8 @@
+2007-03-29  Bruno Haible  <bruno@clisp.org>
+
+	* vasprintf.c: Sync with gnulib.
+	* asprintf.c: Likewise.
+
 2007-03-25  Bruno Haible  <bruno@clisp.org>
 
 	* lib/printf-parse.c [!IN_LIBINTL]: Include <stdint.h>, for intmax_t.
